Improved smo data table in TestView.
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -20,13 +20,13 @@
 	<script src="{% static "ui-bootstrap-tpls-0.11.0.min.js" %}"></script>
 	<style>	
 		html{
-	  		height: 100vh;
-	  		width: 100vw;
+	  		height: 100%;
+	  		width: 100%;
 	  		
 		}
 		body {
-	  		height: 100vh;
-	  		width: 100vw;
+	  		height: 100%;
+	  		width: 100%;
 	  		
 		}
 	</style>
