--- a/templates/TestView.html
+++ b/templates/TestView.html
@@ -99,6 +99,8 @@ angular.module('testApp', ['ui.bootstrap', 'angularTreeview'])
 		$scope.modelColumn.isModelColumn = true;
 		$scope.modelColumn.show = true;
 		
+		$scope.fileName = "data.csv";
+		
 		$scope.setDefaultPattern = function(column){
 			if (column.numFormatType == 'fixed' && column.defaultFixedPattern){
 				column.numFormatPattern = '.0f';
@@ -128,13 +130,6 @@ angular.module('testApp', ['ui.bootstrap', 'angularTreeview'])
 				$scope.setDefaultPattern($scope.modelColumn);
 			}
 		}
-		
-// 		$scope.resetModelColumn = function(column){
-// 			if (!column.isModelColumn){
-// 				$scope.toAll = false;
-				
-// 			}
-// 		}
 		
 		$scope.checkAll = function(){
 			$scope.modelColumn.show = !$scope.modelColumn.show;
@@ -172,7 +167,8 @@ angular.module('testApp', ['ui.bootstrap', 'angularTreeview'])
 			if ($scope.toggled == true){
 				for (var i = 0; i < $scope.columnTable.columns.length; i++){
 					$scope.columnTable.columns[i].numDecimalPoints = $scope.columnTable.columns[i].numFormatPattern[1];					
-				}				
+				}
+				$scope.showInputField = false;
 			}			
 		}
 		
@@ -243,30 +239,38 @@ angular.module('testApp', ['ui.bootstrap', 'angularTreeview'])
 		};	
 		 	
 		
-	}])
-	.directive('smoDataTable', function () {
-		return {
-	        restrict: 'E',
-	        link: function(scope, element, attr) {
-	        	// TODO: Implement 
-	        	
-	        }
-		}
-	});
+	}]);
+// 	.directive('smoDataTable', ['$compile', function ($compile) {
+// 		return {
+// 	        restrict: 'E',
+// 	        link: function(scope, element, attrs) {
+// 		        var template = "";
+// 		        var columnTable = attrs.columnTable;
+// 	        	element.html('').append( $compile(template)(scope) );
+// 	        }
+// 		}
+// 	});
 
 </script>
 <style>
 
-div .scrollable {
+div .scrollable-container {
 /* 	width: 1030px; */
 /* 	height: 500px; */
-	width: 80vw;
-	height: 65vh;
+ 	width: auto; 
+ 	max-height: 70vh; 
     overflow:auto;
+    background-color: #F6F6F6; 
+    border: 1px solid #000;
 }
 .no-margin {
 	margin-left:-20px; 
 	margin-right:-20px;
+}
+
+table th {
+	padding:5px 10px 15px 10px; 
+	background-color: #DEDEDE; 
 }
 
 .my-table {
@@ -275,9 +279,8 @@ div .scrollable {
 	border: 1px solid; 
 	border-color: black;	
  	margin-top:15px; 
- 	margin-bottom: 15px; 
-	
-	
+ 	margin-bottom: 15px;
+ 	margin-left:15px; 	
 }
 
 .my-table th {
@@ -288,6 +291,7 @@ div .scrollable {
 
 .my-table td {
 	border: 1pt solid #7F7F7F;
+	padding:10px 5px 15px 20px;
 }
 
 .my-table tr td:first-child {
@@ -309,73 +313,62 @@ div .scrollable {
 
 <div ng-app="testApp" ng-controller="testController">
 	<div class="container">
-		<div class="row">
-		<h2> Data table </h2>
 		<br>
-		</div>
 		<div class="row">
-			<div class="col-md" style="background-color: #F6F6F6; border: 1px solid #000;">
-				<table>
-					<tr>
-						<td style="vertical-align: top; padding-top:15px; padding-left:10px;padding-right:10px; padding-bottom:10px;">
-							<div ng-if="!toggled">
-								<button class="btn btn-info btn-sm" ng-click="checkAll()" style="font-weight:bold; color:black;" ng-bind="checkAlltext"></button>
-								<select ng-model = "modelColumn.numFormatType" ng-options = "type for type in formatTypeChoices" ng-change="setDefaultPattern(modelColumn)"></select>
-								<br>										
-								<div ng-if="!isNumFormatStandard(modelColumn) && toAll"> 
-									<select ng-if="isNumFormatFixed(modelColumn)"  ng-model="modelColumn.numFormatPattern" ng-options = "pattern for pattern in fixedFormatChoices"></select>
-									<select ng-if="!isNumFormatFixed(modelColumn)" ng-model = "modelColumn.numFormatPattern" ng-options = "pattern for pattern in expFormatChoices"></select>
-								</div>	
-								<button class="btn btn-info btn-sm" ng-click="SetToAll(modelColumn)" style="font-weight:bold; color:black;">Set Format to All</button>
-								<br>
-								<br>
-							</div>
-							<div><button class="btn btn-default" ng-click="toggleTable()" ng-bind="toggleText"></button><span ng-if="toggled">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span></div>
-							<div ng-if="!toggled && !showInputField"><button class="btn btn-default" ng-click="enterCSVfileName()">Export to CSV</button></div>
-							<div ng-if="!toggled && showInputField">
-								File name:<input type="text" ng-model="fileName" style="max-width:120px;"></input>
-								<button class="btn btn-default" ng-click="exportCSV(fileName)">Submit</button>
-							</div>
-						</td>					
-						<td>
-							<div class="scrollable">
-							<table class = "my-table">						
-								<tr ng-if="!toggled">
-									<th ng-repeat="column in columnTable.columns"  style="padding:5px 10px 15px 10px; background-color: #DEDEDE; ">
-										<span ng-bind="column.name"></span>
-										<input type="checkbox" ng-model="column.show"></input>
-										<br>
-										<select ng-model = "column.numFormatType" ng-options = "type for type in formatTypeChoices" ng-change="setDefaultPattern(column)"></select>
-										<br>										
-										<div ng-show="!isNumFormatStandard(column)"> 
-											<select ng-if="isNumFormatFixed(column)"  ng-model="column.numFormatPattern" ng-options = "pattern for pattern in fixedFormatChoices" ng-change="setDefaultPatternToModelColumn(column)"></select>
-											<select ng-if="!isNumFormatFixed(column)" ng-model = "column.numFormatPattern" ng-options = "pattern for pattern in expFormatChoices" ng-change="setDefaultPatternToModelColumn(column)"></select>
-										</div>
-									</th>
-								</tr>
-								<tr ng-if="toggled">
-									<th ng-if="column.show" ng-repeat="column in columnTable.columns" style="padding:10px 10px 15px 10px; background-color: #DEDEDE;" >
-										<span ng-bind="column.name"></span>
-									</th>
-								</tr>
-								<tr ng-if="!toggled" ng-repeat="rowValue in columnTable.data">
-									<td ng-repeat = "value in rowValue track by $index" style="padding:10px 5px 15px 20px;">
-										<div ng-show="columnTable.columns[$index].show" ng-bind="value"></div>
-										<div ng-hide="columnTable.columns[$index].show"></div>
-									</td>
-								</tr>
-								<tr ng-if="toggled" ng-repeat="rowValue in columnTable.data">
-									<td ng-if="columnTable.columns[$index].show" ng-repeat = "value in display(rowValue) track by $index" style="padding:10px 5px 15px 20px;">
-										<div ng-show="columnTable.columns[$index].show" ng-bind="value"></div>
-										<div ng-hide="columnTable.columns[$index].show"></div>
-									</td>
-								</tr>				
-							</table>
-							</div>
-						</td>
-					</tr>
-				</table>		
+			<div class="col-md-2" style="vertical-align: top; text-align:right; padding-top:15px;  padding-bottom:10px;">
+				<div ng-if="!toggled">
+					<div><button class="btn btn-info btn-sm" ng-click="checkAll()" style="font-weight:bold; color:black;" ng-bind="checkAlltext"></button></div>
+					<div><select ng-model = "modelColumn.numFormatType" ng-options = "type for type in formatTypeChoices" ng-change="setDefaultPattern(modelColumn)"></select></div>										
+					<div ng-if="!isNumFormatStandard(modelColumn) && toAll"> 
+						<select ng-if="isNumFormatFixed(modelColumn)"  ng-model="modelColumn.numFormatPattern" ng-options = "pattern for pattern in fixedFormatChoices"></select>
+						<select ng-if="!isNumFormatFixed(modelColumn)" ng-model = "modelColumn.numFormatPattern" ng-options = "pattern for pattern in expFormatChoices"></select>
+					</div>	
+					<div><button class="btn btn-info btn-sm" ng-click="SetToAll(modelColumn)" style="font-weight:bold; color:black;">Set Format to All</button></div>
+					<br>
+				</div>
+				<button class="btn btn-default" ng-click="toggleTable()" ng-bind="toggleText"></button>
+				<div ng-if="!toggled && !showInputField"><button class="btn btn-default" ng-click="enterCSVfileName()">Export to CSV</button></div>
+				<div ng-if="!toggled && showInputField">
+					File name:<input type="text" ng-model="fileName" style="width:72%;"></input>
+					<button class="btn btn-default" ng-click="exportCSV(fileName)">Submit</button>
+				</div>	
 			</div>
+			<div class="col-md-10">			
+				<div class="scrollable-container">
+					<table class = "my-table">						
+						<tr ng-if="!toggled">
+							<th ng-repeat="column in columnTable.columns">
+								<span ng-bind="column.name"></span>
+								<input type="checkbox" ng-model="column.show"></input>
+								<br>
+								<select ng-model = "column.numFormatType" ng-options = "type for type in formatTypeChoices" ng-change="setDefaultPattern(column)"></select>
+								<br>										
+								<div ng-show="!isNumFormatStandard(column)"> 
+									<select ng-if="isNumFormatFixed(column)"  ng-model="column.numFormatPattern" ng-options = "pattern for pattern in fixedFormatChoices" ng-change="setDefaultPatternToModelColumn(column)"></select>
+									<select ng-if="!isNumFormatFixed(column)" ng-model = "column.numFormatPattern" ng-options = "pattern for pattern in expFormatChoices" ng-change="setDefaultPatternToModelColumn(column)"></select>
+								</div>
+							</th>
+						</tr>
+						<tr ng-if="toggled">
+							<th ng-if="column.show" ng-repeat="column in columnTable.columns">
+								<span ng-bind="column.name"></span>
+							</th>
+						</tr>
+						<tr ng-if="!toggled" ng-repeat="rowValue in columnTable.data">
+							<td ng-repeat = "value in rowValue track by $index">
+								<div ng-show="columnTable.columns[$index].show" ng-bind="value"></div>
+								<div ng-hide="columnTable.columns[$index].show"></div>
+							</td>
+						</tr>
+						<tr ng-if="toggled" ng-repeat="rowValue in columnTable.data">
+							<td ng-if="columnTable.columns[$index].show" ng-repeat = "value in display(rowValue) track by $index">
+								<div ng-show="columnTable.columns[$index].show" ng-bind="value"></div>
+								<div ng-hide="columnTable.columns[$index].show"></div>
+							</td>
+						</tr>				
+					</table>
+				</div>
+			</div>	
 		</div>
 	</div>
 </div>
