Created smo-data-table directive (w/o arguments)
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/static/smo-datatable/smo.datatable.css
+++ b/static/smo-datatable/smo.datatable.css
@@ -6,6 +6,11 @@ div .scrollable-container {
     border: 1px solid #000;
 }
 
+div select {
+	font-weight: bold;
+	color: black;
+}
+
 table th {
 	padding:5px 10px 15px 10px; 
 	background-color: #DEDEDE; 
