--- a/templates/Base.html
+++ b/templates/Base.html
@@ -44,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" style="font-size: x-large; font-weight:bold;" href="{% url 'home' %}">SmoWeb</a>
+          <a class="navbar-brand" style="font-size: x-large; font-weight:bold;" href="{% url 'platform' %}">SmoWeb</a>
         </div>
       	<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
