--- a/templates/Platform.html
+++ b/templates/Platform.html
@@ -2,14 +2,14 @@
 
 {% block navs %}
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">SmoFluidProps <span class="caret"></span></a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">ThermoFluids<span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
-        <li><a href="{% url 'SmoFluidProps:FluidProps_SetUp' %}">SetUp</a></li>
+        <li><a href="{% url 'ThermoFluids:FluidPropertiesCoolProp' %}">Fluid Properties (CoolProp)</a></li>
         <li><a href="#">Another action</a></li>
         <li><a href="#">Something else here</a></li>
         <li class="divider"></li>
         <li class="dropdown-header">Nav header</li>
-        <li><a href="#">Separated link</a></li>
+        <li><a href="{% url 'ThermoFluids:testView' %}">Test View</a></li>
         <li><a href="#">One more separated link</a></li>
       </ul>
     </li>
@@ -18,11 +18,11 @@
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Data Management <span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
         <li><a href="{% url 'DataManagement:ImportCSV' %}">Import CSV</a></li>
-        <li><a href="{% url 'DataManagement:HdfInterfaceView' %}">Data Explorer</a></li>
+        <li><a href="{% url 'DataManagement:DataExplorer' %}">Data Explorer</a></li>
         <li><a href="#">Something else here</a></li>
         <li class="divider"></li>
         <li class="dropdown-header">Nav header</li>
-        <li><a href="#">Separated link</a></li>
+        <li><a href="{% url 'DataManagement:testView' %}">Test View</a></li>
         <li><a href="#">One more separated link</a></li>
       </ul>
     </li>
