Added page for friction flow calculations.
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/templates/Platform.html
+++ b/templates/Platform.html
@@ -5,7 +5,7 @@
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">ThermoFluids<span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
         <li><a href="{% url 'ThermoFluids:FluidPropertiesCoolProp' %}">Fluid Properties (CoolProp)</a></li>
-        <li><a href="#">Another action</a></li>
+        <li><a href="{% url 'ThermoFluids:FlowResistance' %}">FlowResistance</a></li>
         <li><a href="#">Something else here</a></li>
         <li class="divider"></li>
         <li class="dropdown-header">Nav header</li>
