--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -6,15 +6,46 @@
 <script src="{% static 'SmoUtil.js' %}"></script>
 <script>
 angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
+	.config(['$httpProvider', function($httpProvider) {
+	    $httpProvider.defaults.xsrfCookieName = 'csrftoken';
+	    $httpProvider.defaults.xsrfHeaderName = 'X-CSRFToken';
+	    
+	}])
 	.controller('FlowResistanceController', [ '$scope', '$http', '$window', 'units', function($scope, $http, $window, units) {
-		$scope.inputVariables = {};
-		$scope.internalDiameter = new units.Quantity('Length', 5, 'mm');
-		$scope.externalDiameter = new units.Quantity('Length', 6, 'mm');
+		$scope.units = units;
+		
+		$scope.materials = {
+			solids: ['stainless steel 304', 'aluminium 6061'],
+			fluids: ['parahydrogen', 'water']
+		};
+		
+		$scope.inputVariables = {
+			pipeLength : new units.Quantity('Length', 1., 'm'),
+			internalDiameter : new units.Quantity('Length', 5., 'mm'),
+			externalDiameter : new units.Quantity('Length', 6., 'mm'),
+			surfaceRoughness : new units.Quantity('Length', 25., 'um'),
+			inletPressure : new units.Quantity('Pressure', 1, 'bar'),
+			inletTemperature : new units.Quantity('Temperature', 15, 'degC')
+		};
+		
 		$scope.dumpObj = function(obj) {
 			return angular.toJson(obj, true);
-		}	
-		var a = units.quantities[$scope.internalDiameter.quantity].units;
-		
+		}
+		$scope.compute = function() {
+			$http({
+		        method  : 'POST',
+		        url     : '/ThermoFluids/FlowResistance/',
+		        data    : $scope.inputVariables,
+		        headers : { 'Content-Type': 'application/x-www-form-urlencoded' }  // set the headers so angular passing info as form data (not request payload)
+		    })
+	        .success(function(data) {
+	            console.log(data);
+
+	            if (!data.success) {
+	            } else {
+	            }
+	        });		
+		}
 	}]);
 </script>
 {% endblock %}
@@ -22,26 +53,30 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 {% block content %}
 
 <div ng-app="FlowResistance" ng-controller="FlowResistanceController">
+	<div class="col-md-2"></div>
+	<div class="col-md-10">
 	<div style="position:relative; width:250mm;height:50mm">
 		<object data="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></object>
-	    <div style="position:absolute;left:55mm;top:30mm;">
-			length: <input type="text">
+	    <div style="position:absolute;left:35mm;top:29mm;">
+			pipe length: <smo-input-quantity smo-quantity-var="inputVariables.pipeLength"></smo-input-quantity>
 		</div>
 	    <div style="position:absolute;left:155mm;top:2mm;">
 			<table>
-				<tr><td>internal diameter: </td><td><smo-input-quantity smo-quantity-var="internalDiameter"></smo-input-quantity></td></tr>				
-				<tr><td>external diameter: </td><td><smo-input-quantity smo-quantity-var="externalDiameter"></smo-input-quantity></td></tr>	
-				<tr><td>pipe wall material: </td><td><input  type="text"></td></tr>	
-				<tr><td>surface roughness: </td><td><input  type="text"></td></tr>
+				<tr><td>internal diameter: </td><td><smo-input-quantity smo-quantity-var="inputVariables.internalDiameter"></smo-input-quantity></td></tr>				
+				<tr><td>external diameter: </td><td><smo-input-quantity smo-quantity-var="inputVariables.externalDiameter"></smo-input-quantity></td></tr>	
+				<tr><td>pipe material: </td><td><select ng-model="inputVariables.pipeMaterial" ng-options="material for material in materials.solids"></select></td></tr>	
+				<tr><td>surface roughness: </td><td><smo-input-quantity smo-quantity-var="inputVariables.surfaceRoughness"></smo-input-quantity></td></tr>
 			</table>
 	    </div>
 	</div>
 	<table>
-		<tr><td>fluid: </td><td><input  type="text"></td></tr>
-		<tr><td>inlet pressure: </td><td><input  type="text"></td></tr>	
-		<tr><td>inlet temperature: </td><td><input  type="text"></td></tr>
+		<tr><td>fluid: </td><td><select ng-model="inputVariables.fluid" ng-options="material for material in materials.fluids"></select></td></tr>
+		<tr><td>inlet pressure: </td><td><smo-input-quantity smo-quantity-var="inputVariables.inletPressure"></smo-input-quantity></td></tr>	
+		<tr><td>inlet temperature: </td><td><smo-input-quantity smo-quantity-var="inputVariables.inletTemperature"></smo-input-quantity></td></tr>
 	</table>
-	<div ng-bind='dumpObj(units.quantities[internalDiameter.quantity].units)'></div>
+	<button class="btn btn-default" ng-click="compute()">Compute</button>
+<!-- 	<div ng-bind='dumpObj(inputVariables)'></div> -->
+	</div>
 </div>
 {% endblock %}
 
