--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -12,6 +12,7 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 	    
 	}])
 	.controller('FlowResistanceController', [ '$scope', '$http', '$window', 'units', function($scope, $http, $window, units) {
+		$scope.resultComputed = false;
 		$scope.units = units;
 		
 		$scope.materials = {
@@ -25,7 +26,10 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 			externalDiameter : new units.Quantity('Length', 6., 'mm'),
 			surfaceRoughness : new units.Quantity('Length', 25., 'um'),
 			inletPressure : new units.Quantity('Pressure', 1, 'bar'),
-			inletTemperature : new units.Quantity('Temperature', 15, 'degC')
+			inletTemperature : new units.Quantity('Temperature', 15, 'degC'),
+			massFlowRate : new units.Quantity('MassFlowRate', 10, 'kg/h'),
+			fluid : 'parahydrogen',
+			pipeMaterial : 'stainless steel 304'
 		};
 		
 		$scope.dumpObj = function(obj) {
@@ -35,15 +39,17 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 			$http({
 		        method  : 'POST',
 		        url     : '/ThermoFluids/FlowResistance/',
-		        data    : $scope.inputVariables,
+		        data    : {action : 'computePressureDrop', parameters : $scope.inputVariables},
 		        headers : { 'Content-Type': 'application/x-www-form-urlencoded' }  // set the headers so angular passing info as form data (not request payload)
 		    })
 	        .success(function(data) {
-	            console.log(data);
-
-	            if (!data.success) {
-	            } else {
-	            }
+	            $scope.resultVariabes = {
+	            	Re : new units.Quantity('Dimensionless', data.result.Re, '-'),
+	            	zeta : new units.Quantity('Dimensionless', data.result.zeta, '-'),
+	            	pressureDrop :	new units.Quantity('Pressure', data.result.pressureDrop, 'Pa', 'bar')	            		
+	            };
+	            console.log($scope.dumpObj($scope.resultVariabes));
+	            $scope.resultComputed = true;
 	        });		
 		}
 	}]);
@@ -73,9 +79,17 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 		<tr><td>fluid: </td><td><select ng-model="inputVariables.fluid" ng-options="material for material in materials.fluids"></select></td></tr>
 		<tr><td>inlet pressure: </td><td><smo-input-quantity smo-quantity-var="inputVariables.inletPressure"></smo-input-quantity></td></tr>	
 		<tr><td>inlet temperature: </td><td><smo-input-quantity smo-quantity-var="inputVariables.inletTemperature"></smo-input-quantity></td></tr>
+		<tr><td>inlet mass flow rate: </td><td><smo-input-quantity smo-quantity-var="inputVariables.massFlowRate"></smo-input-quantity></td></tr>
 	</table>
 	<button class="btn btn-default" ng-click="compute()">Compute</button>
-<!-- 	<div ng-bind='dumpObj(inputVariables)'></div> -->
+	<br><br><br>
+	<div ng-if="resultComputed">
+		<table>
+			<tr><td>Re : </td><td><smo-output-quantity smo-quantity-var="resultVariabes.Re"></smo-output-quantity></td></tr>				
+			<tr><td>friction factor zeta : </td><td><smo-output-quantity smo-quantity-var="resultVariabes.zeta"></smo-output-quantity></td></tr>	
+			<tr><td>pressure drop : </td><td><smo-output-quantity smo-quantity-var="resultVariabes.pressureDrop"></smo-output-quantity></td></tr>			
+		</table>
+	</div>
 	</div>
 </div>
 {% endblock %}
