--- a/DataManagement/templates/DataManagement/DataExplorer.html
+++ b/DataManagement/templates/DataManagement/DataExplorer.html
@@ -21,7 +21,7 @@ angular.module('testApp', ['ui.bootstrap', 'smoDataTableModule', 'angularTreevie
 <div class="container">
 	<div class="row">
 		<div class="col-md-2" style="text-align: right; font-weight: bold; font-size: medium;">
-			Eplore HDF file:
+			Explore data file:
 		</div>
 		<div class="col-md-10">
 			<smo-hdf-browser tree-id="hdfView"></smo-hdf-browser>
